<resources>
    <string name="app_name">Cardview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="apellido">Apellido</string>
    <string name="agregar">Agregar</string>
</resources>
